Fixed issue where connect container was bleeding over past the html causing unwanted layout changes.

--- a/src/components/Connect/Connect.module.scss
+++ b/src/components/Connect/Connect.module.scss
@@ -2,7 +2,8 @@
 
 .connectContainerActive {
   position: absolute;
-  width: 114rem;
+  width: 100%;
+  max-width: 114rem;
   height: calc(100vh - 5.8rem);
   top: 5.8rem;
   padding: 5rem 2rem 0;
